--- a/api/kohua/package.json
+++ b/api/kohua/package.json
@@ -13,7 +13,7 @@
     "@strapi/plugin-i18n": "4.14.5",
     "@strapi/plugin-users-permissions": "4.14.5",
     "@strapi/provider-email-sendgrid": "^4.16.2",
-    "@strapi/strapi": "4.14.5",
+    "@strapi/strapi": "^4.14.5",
     "ajv": "^8.17.1",
     "better-sqlite3": "8.6.0",
     "stripe": "^14.5.0"
