--- a/api/kohua/package.json
+++ b/api/kohua/package.json
@@ -17,7 +17,11 @@
     "@strapi/strapi": "^4.14.5",
     "ajv": "^8.17.1",
     "better-sqlite3": "8.6.0",
-    "stripe": "^14.5.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^5.3.4",
+    "stripe": "^14.5.0",
+    "styled-components": "^5.3.11"
   },
   "author": {
     "name": "A Strapi developer"
